// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col can align column content horizontally using a responsive prop object 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (max-width:575px) {
  .c0 {
    display: block;
    text-align: center;
  }
}

@media (min-width:576px) {
  .c0 {
    display: block;
    text-align: center;
  }
}

@media (min-width:768px) {
  .c0 {
    display: block;
    text-align: left;
  }
}

@media (min-width:992px) {
  .c0 {
    display: block;
    text-align: left;
  }
}

@media (min-width:1200px) {
  .c0 {
    display: block;
    text-align: left;
  }
}

<Col__StyledCol
  gutter={true}
  hiddenLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
  horizontalAlignLevel={
    Array [
      "center",
      "center",
      "left",
      "left",
      "left",
    ]
  }
  xs={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Col__StyledCol-sc-15yvjc7-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            [Function],
            [Function],
            [Function],
          ],
        },
        "displayName": "Col__StyledCol",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Col__StyledCol-sc-15yvjc7-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    hiddenLevel={
      Array [
        false,
        false,
        false,
        false,
        false,
      ]
    }
    horizontalAlignLevel={
      Array [
        "center",
        "center",
        "left",
        "left",
        "left",
      ]
    }
    xs={true}
  >
    <div
      className="c0"
    >
      Some content
    </div>
  </StyledComponent>
</Col__StyledCol>
`;

exports[`Col can align column content horizontally using a string 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (max-width:575px) {
  .c0 {
    display: block;
    text-align: right;
  }
}

@media (min-width:576px) {
  .c0 {
    display: block;
    text-align: right;
  }
}

@media (min-width:768px) {
  .c0 {
    display: block;
    text-align: right;
  }
}

@media (min-width:992px) {
  .c0 {
    display: block;
    text-align: right;
  }
}

@media (min-width:1200px) {
  .c0 {
    display: block;
    text-align: right;
  }
}

<Col__StyledCol
  gutter={true}
  hiddenLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
  horizontalAlignLevel={
    Array [
      "right",
      "right",
      "right",
      "right",
      "right",
    ]
  }
  xs={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Col__StyledCol-sc-15yvjc7-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            [Function],
            [Function],
            [Function],
          ],
        },
        "displayName": "Col__StyledCol",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Col__StyledCol-sc-15yvjc7-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    hiddenLevel={
      Array [
        false,
        false,
        false,
        false,
        false,
      ]
    }
    horizontalAlignLevel={
      Array [
        "right",
        "right",
        "right",
        "right",
        "right",
      ]
    }
    xs={true}
  >
    <div
      className="c0"
    >
      Some content
    </div>
  </StyledComponent>
</Col__StyledCol>
`;

exports[`Col can hide columns 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (min-width:576px) {
  .c0 {
    max-width: 0%;
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 8.333333333333332%;
    -webkit-flex-basis: 8.333333333333332%;
    -ms-flex-preferred-size: 8.333333333333332%;
    flex-basis: 8.333333333333332%;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 0%;
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
  }
}

@media (max-width:575px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

@media (min-width:576px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

@media (min-width:768px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:992px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:1200px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

<Col__StyledCol
  gutter={true}
  hiddenLevel={
    Array [
      0,
      0,
      1,
      1,
      0,
    ]
  }
  horizontalAlignLevel={
    Array [
      "inherit",
      "inherit",
      "inherit",
      "inherit",
      "inherit",
    ]
  }
  md={1}
  sm={0}
  xl={0}
  xs={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Col__StyledCol-sc-15yvjc7-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            [Function],
            [Function],
            [Function],
          ],
        },
        "displayName": "Col__StyledCol",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Col__StyledCol-sc-15yvjc7-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    hiddenLevel={
      Array [
        0,
        0,
        1,
        1,
        0,
      ]
    }
    horizontalAlignLevel={
      Array [
        "inherit",
        "inherit",
        "inherit",
        "inherit",
        "inherit",
      ]
    }
    md={1}
    sm={0}
    xl={0}
    xs={true}
  >
    <div
      className="c0"
    >
      Some content
    </div>
  </StyledComponent>
</Col__StyledCol>
`;

exports[`Col renders 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (max-width:575px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:576px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:768px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:992px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:1200px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

<Col__StyledCol
  gutter={true}
  hiddenLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
  horizontalAlignLevel={
    Array [
      "inherit",
      "inherit",
      "inherit",
      "inherit",
      "inherit",
    ]
  }
  xs={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Col__StyledCol-sc-15yvjc7-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            [Function],
            [Function],
            [Function],
          ],
        },
        "displayName": "Col__StyledCol",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Col__StyledCol-sc-15yvjc7-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    hiddenLevel={
      Array [
        false,
        false,
        false,
        false,
        false,
      ]
    }
    horizontalAlignLevel={
      Array [
        "inherit",
        "inherit",
        "inherit",
        "inherit",
        "inherit",
      ]
    }
    xs={true}
  >
    <div
      className="c0"
    >
      Some content
    </div>
  </StyledComponent>
</Col__StyledCol>
`;

exports[`Col supports responsive hidden columns 1`] = `
.c0 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 1rem;
  padding-right: 1rem;
}

@media (min-width:576px) {
  .c0 {
    max-width: 8.333333333333332%;
    -webkit-flex-basis: 8.333333333333332%;
    -ms-flex-preferred-size: 8.333333333333332%;
    flex-basis: 8.333333333333332%;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 0%;
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 8.333333333333332%;
    -webkit-flex-basis: 8.333333333333332%;
    -ms-flex-preferred-size: 8.333333333333332%;
    flex-basis: 8.333333333333332%;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 0%;
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
  }
}

@media (max-width:575px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

@media (min-width:576px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:768px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

@media (min-width:992px) {
  .c0 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:1200px) {
  .c0 {
    display: none;
    text-align: inherit;
  }
}

<Col__StyledCol
  gutter={true}
  hiddenLevel={
    Array [
      0,
      1,
      0,
      1,
      0,
    ]
  }
  horizontalAlignLevel={
    Array [
      "inherit",
      "inherit",
      "inherit",
      "inherit",
      "inherit",
    ]
  }
  lg={1}
  md={0}
  sm={1}
  xl={0}
  xs={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Col__StyledCol-sc-15yvjc7-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            [Function],
            [Function],
            [Function],
          ],
        },
        "displayName": "Col__StyledCol",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Col__StyledCol-sc-15yvjc7-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    gutter={true}
    hiddenLevel={
      Array [
        0,
        1,
        0,
        1,
        0,
      ]
    }
    horizontalAlignLevel={
      Array [
        "inherit",
        "inherit",
        "inherit",
        "inherit",
        "inherit",
      ]
    }
    lg={1}
    md={0}
    sm={1}
    xl={0}
    xs={true}
  >
    <div
      className="c0"
    >
      Some content
    </div>
  </StyledComponent>
</Col__StyledCol>
`;
